--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Star Wars Movie Search</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css"/>
-    <script src="js/UILayer.js" defer></script>
+    <link rel="stylesheet" href="src/style.css" type="text/css"/>
+    <script src="dist/bundle.js" defer></script>
 </head>
 <body>
     <input type="text" id="movie-input" class="movie-search-input" placeholder="Type here..."/>
