Feature planet details view (#18)
* Add function to generate film details view

* Add styles to film details view

* Add feature to generate planets detail view

Add js file that generates planets details view and add css styles.

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <p class="header_caption-first">welcome to the</p>
             <div class="b-header__caption-second">
                 <div class="b-header__content-caption-second">
-                    <h1 class="b-header__content-caption-second__header">dark</h1>
+                    <h1 class="b-header__content-caption-second__header">DARK</h1>
                 </div>
                 <div class="b-header__content-caption-second">
-                    <h1 class="b-header__content-caption-second__header">side</h1>
+                    <h1 class="b-header__content-caption-second__header">SiDE</h1>
                 </div>
             </div>
             <p class="header__caption-third">find a movie from star wars saga</p>
@@ -63,3 +63,4 @@
 </body>
 
 </html>
+  
